# IdenMarshmellow

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: build-linux.yml
c_src/: vault_core.h  vault_ffi.c  vault_monitor.c
data/: com.idenmarshmellow.gresource.xml  style.css
src/: accessibility.rs  main.rs  window.rs
